--- a/SafetyChecker/templates/one_country.html
+++ b/SafetyChecker/templates/one_country.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check Safety</title>
 </head>
+<!-- This is a page that suggest print one country to check it's status -->
 <body>
     <style>
         *{font-family: sans-serif;}
