--- a/SafetyChecker/templates/compare_countries.html
+++ b/SafetyChecker/templates/compare_countries.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compare Countries</title>
 </head>
+<!-- This in a page that suggest to print two countries to compare them -->
 <body>
     <style>
         *{font-family: sans-serif;}
